--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,16 @@ textarea.materialize-textarea:focus:not([readonly]) {
 	text-align: center;
 }
 
-/* SearchBar */
+/* Dashboard Search */
+.search {
+	height: 1rem !important;
+}
+.search_label {
+	top: 0.5rem !important;
+	left: auto !important;
+}
+
+/* MovieDB SearchBar */
 .searchbar {
 	position: relative;
 }
@@ -127,4 +136,24 @@ textarea.materialize-textarea:focus:not([readonly]) {
 }
 .progress_bar {
 	height: 1rem !important;
+}
+.upload_image_preview {
+	width: 100%;
+	height: 20rem;
+}
+
+/* Single Review */
+.single_review_image {
+	width: 10rem !important;
+	height: 100% !important;
+}
+.single_review_title {
+	padding-left: 2.5rem !important;
+	padding-top: 0.75rem !important;
+}
+
+/* Review Details */
+.detail_review_image {
+	width: 100% !important;
+	height: 20rem !important;
 }
