review details updated

--- a/src/index.css
+++ b/src/index.css
@@ -107,10 +107,6 @@ code {
 }
 
 /* Dashboard */
-.dashboard {
-    padding: 2rem 3rem 0 3rem;
-}
-
 input[type="text"]:not(.browser-default):focus:not([readonly]),
 input[type="email"]:not(.browser-default):focus:not([readonly]),
 input[type="password"]:not(.browser-default):focus:not([readonly]),
@@ -123,6 +119,11 @@ textarea.materialize-textarea:focus:not([readonly]) {
 /* Dashboard Right Section */
 
 /* Dashboard Search */
+
+/* Modal */
+.makeStyles-paper-2:focus {
+    outline-color: #fff;
+}
 
 /* Notification */
 .single_notification {
