--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$primaryColor: #44d0f5;
+$secondaryColor: #3aaff2;
+
 body {
     margin: 0;
     padding: 0;
@@ -48,7 +51,7 @@ code {
 .signup-box h3 {
     margin-bottom: 30px;
     font-weight: 300;
-    color: #4d308c;
+    color: $secondaryColor;
 }
 
 .signin-box input[type="email"],
@@ -77,33 +80,36 @@ code {
     width: 20rem;
 }
 
+.common_color {
+    color: $primaryColor;
+}
+
 /* Headlines */
 .headline {
     /* color:#05AFF2; */
-    color: #3c2d73;
+    color: $primaryColor;
 }
 
 /* Buttons color */
 .buttons_color {
-    background-color: #3c2d73;
+    background-color: $primaryColor;
 }
 .buttons_color:hover {
-    background-color: #4d308c;
+    background-color: $secondaryColor;
 }
 
 /* Navbar */
 .nav-wrapper {
-    background-color: #3c2d73;
+    background-color: #f2f2f2;
     padding: 0rem 4rem;
     height: 5rem;
     line-height: 5rem;
 }
 .initials_button {
-    background-color: #4d308c;
+    background-color: $secondaryColor;
 }
 .initials_button:hover {
-    background-color: #3c2d73;
-    background: transparent;
+    background-color: $primaryColor;
 }
 
 /* Dashboard */
@@ -112,7 +118,7 @@ input[type="email"]:not(.browser-default):focus:not([readonly]),
 input[type="password"]:not(.browser-default):focus:not([readonly]),
 input[type="file"]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-    border-color: #4d308c;
+    border-color: $secondaryColor;
     box-shadow: none;
 }
 
@@ -159,6 +165,11 @@ textarea.materialize-textarea:focus:not([readonly]) {
 /* New Review */
 .review_box .active {
     padding-bottom: 10px;
+}
+
+.circleButton {
+    color: $primaryColor;
+    border: 1px solid $primaryColor;
 }
 
 /* Image Uploader */
@@ -209,7 +220,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
     color: #737373;
 }
 .single_review_author {
-    color: #4d308c;
+    color: $secondaryColor;
     font-style: italic;
 }
 
